@@ -44,7 +44,7 @@ dnl ===================
 
 GLIB_REQ=2.6.0
 GMODULE_REQ=2.0.0
-GTK_REQ=2.10.0
+GTK_REQ=2.8.0
 GNOME_REQ=2.0.0
 GNOMEUI_REQ=2.4.0
 GNOMEVFS_REQ=2.0.0
